--- a/core/config.json
+++ b/core/config.json
@@ -1,6 +1,6 @@
 {
-  "bot_prefix": "!?",
-  "token": "NzcwMDQ3NTcxNzQ1NTcwODI3.X5X4rw.1d4HWZXbcwn-D_jPEvtnlcHMvZU",
+  "bot_prefix": "?",
+  "token": "",
   "application_id": "",
   "owners": [
     443789116484878336
